kubernetes/traefik/dashboard/ingress-internal.yaml
# Custom service exposing the dashboard of the "local" traefik, in traefik ns
apiVersion: v1
kind: Service
metadata:
  name: traefik-primary-dashboard
  namespace: traefik
spec:
  selector: # Labels from traefik pod
    app.kubernetes.io/instance: traefik-traefik
    app.kubernetes.io/name: traefik
  ports:
    - name: dashboard
      port: 8080
      targetPort: 8080
  type: ClusterIP
---
# Redirect `/` to `/dashboard`
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: traefik-dashboard-redirect
  namespace: traefik
spec:
  redirectRegex:
    regex: ^https://([^/]+)/?$
    replacement: https://${1}/dashboard/
    permanent: true
---
# Expose 'local' Traefik dashboard to VPN
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: traefik-primary-dashboard-tailscale
  namespace: traefik
  annotations:
    kubernetes.io/ingress.class: traefik-tailscale
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`traefik-primary.internal.dmhosted.com`)
      kind: Rule
      middlewares:
        - name: traefik-dashboard-basicauth
          namespace: traefik
        - name: traefik-dashboard-redirect
          namespace: traefik
      services:
        - name: traefik-primary-dashboard
          port: 8080
  tls:
    secretName: traefik-primary-internal-dmhosted
